# scalable_cross_platform_network_programming_framework

./: README.md
BaseServer/: CMakeLists.txt
BaseServer/BaseServer/: CMakeLists.txt  cpp.hint
BaseServer/BaseServer/Memory/Include/Public/: ByteStreamOperator.h  ByteStreamReader.h  ByteStreamWriter.h  StreamException.h  StreamReader.h  StreamWriter.h
BaseServer/BaseServer/Network/Include/Private/: Acceptor.h
BaseServer/BaseServer/Network/Include/Public/: AcceptorFactory.h  IAcceptor.h  IAcceptorObserver.h
BaseServer/BaseServer/Network/Source/: AcceptorFactory.cpp
BaseServer/BaseServer/Protocol/Include/Public/: MessageHandler.h  MessageHandlerRegistry.h  Opcode.h  OutgoingMessage.h  TooLongMessageBodyException.h
BaseServer/BaseServer/Serialization/Include/Private/: IDeserializable.h
BaseServer/BaseServer/Serialization/Include/Public/: ISerializable.h
BaseServer/BaseServer/Settings/Include/Public/: SettingsProperty.h
CMake/: ProjectStructure.cmake  PublishLibrary.cmake
Connection/: CMakeLists.txt
Connection/Connection/: CMakeLists.txt
Connection/Connection/Concurrency/Include/Public/: LockedQueue.h  MPSCQueue.h
Connection/Connection/Exceptions/Include/Public/: Exception.h
Connection/Connection/Macros/Include/Public/: PlattformMacros.h  UtilityMacros.h
Connection/Connection/Memory/Include/Public/: ByteBuffer.h  ByteStreamOperator.h  ByteStreamReader.h  ByteStreamWriter.h  StreamException.h  StreamReader.h  StreamWriter.h
Connection/Connection/Network/Include/Private/: Connection.h  NetworkByteBuffer.h  NetworkByteBufferPosition.h  NetworkThread.h
Connection/Connection/Network/Include/Public/: ConnectionFactory.h  IConnection.h  IConnectionHook.h  IConnectionHookFactory.h  INetworkThread.h  IReceivedQueue.h  ISessionHook.h  ISessionHookFactory.h  NetworkThreadFactory.h  PreprocessedMessage.h
Connection/Connection/Network/Source/: ConnectionFactory.cpp  NetworkThreadFactory.cpp  PreprocessedMessage.cpp
Connection/Connection/Protocol/Include/Public/: MessageSize.h  Opcode.h
Connection/Connection/Random/Include/Public/: Random.h
Connector/: CMakeLists.txt  CreateClass.lnk
Connector/Connector/: CMakeLists.txt  Connector.h  cpp.hint  dllmain.cpp  framework.h
Connector/Connector/Memory/Include/Private/: NativeMemoryOperations.h
Connector/Connector/Memory/Source/: NativeMemoryOperations.cpp
Connector/Connector/Network/Include/Private/: ConnectionHook.h  ConnectionHookFactory.h  ConnectionManager.h  SessionHook.h  SessionHookFactory.h
Connector/Connector/Network/Source/: ConnectionManager.cpp  SessionHook.cpp  SessionHookFactory.cpp
Connector/Connector/Time/Include/Private/: Timer.h
Connector/Connector/Time/Source/: Timer.cpp
Database/: CMakeLists.txt
Database/Database/: CMakeLists.txt
Database/Database/Include/Private/: AsynchronousDatabase.h  DatabaseConnection.h  DatabaseWork.h  DatabaseWorker.h  ProducerConsumerQueue.h  SynchronousDatabase.h  SynchronousDatabaseConnection.h
Database/Database/Include/Public/: Database.h  DatabaseCallback.h  DatabaseProcessor.h  DatabaseWorkException.h
Database/Database/Source/: Database.cpp
GameClient/: .gitignore
GameClient/Assets/Code/Client/: Client.asmdef
GameClient/Assets/Code/Client/Network/: Connection.cs  Connector.cs  Resolver.cs
GameClient/Assets/Code/Client/Protocol/: MessageHandler.cs  MessageHandlerRegistry.cs
GameClient/Assets/Code/CppPlugins/: CppPlugins.asmdef  PluginTarget.cs
GameClient/Assets/Code/Game/: Entity.cs  FlyingStructure.cs  FlyinngStructureCamera.cs  Game.asmdef  GizmosExtension.cs  InputExtension.cs  KeepAliveSender.cs  Opcodes.cs  Player.cs  PlayerController.cs  Session.cs  SessionManager.cs  Status.cs  TimerEvent.cs  WorldSession.cs
GameClient/Assets/Code/NetworkSpawning/: NetworkDeserializable.cs  NetworkSpawnable.cs  NetworkSpawner.cs  NetworkSpawning.asmdef
GameClient/Assets/Materials/: BasicBlue.mat  BasicRed.mat  BasicUnlitTransparentBlue.mat  BasicUnlitTransparentRed.mat  BasicWhiteOpaque.mat  BasicWhiteTransparent.mat
GameClient/Assets/Resources/: Player.prefab  PlayerController.prefab
GameClient/Assets/Scenes/: OutdoorsScene.unity
GameClient/Assets/Settings/HDRPDefaultResources/: HDRenderPipelineGlobalSettings.asset
GameClient/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
GameServer/: CMakeLists.txt
GameServer/GameServer/: AccountManager.h  AccountsDatabase.h  Attack.cpp  Attack.h  AttackerAura.h  Aura.h  AuraFactory.h  CMakeLists.txt  Circle.h  CircleArea.cpp  CircleArea.h  Collectable.h  CollectableSpawner.h  CollectableSpawnerInfo.h  Collection.cpp  Collection.h  CollisionEngine.h  ConnectionHook.h  ConnectionHookFactory.h  DefensiveNPCAI.h  DefensiveNPCAIFactory.h  DemilitarizedArea.h  DemilitarizedAreaFactory.h  DemilitarizedProtectionAura.h  Entity.h  FloatComparison.h  FullAggresiveNPCAI.h  FullAggresiveNPCAIFactory.h  Game.h  GameObject.cpp  GameObject.h  GameSession.cpp  GameSession.h  GameTime.h  IArea.h  ICollectableDespawner.h  ICollectableSpawner.h  IComponent.h  IGameState.h  IMapManager.cpp  (+62 more)
GameServer/GameServer/Messages/: NewPlayerMessage.cpp  NewPlayerMessage.h
GameServerPublic/: CMakeLists.txt
GameServerPublic/GameServerPublic/: CMakeLists.txt  framework.h
GameServerPublic/GameServerPublic/Protocol/Include/Public/: Opcodes.h
Schemas/: accounts.sql  world.sql
Tools/: CreateClass.bat
(+6 files in other folders)
